Adding file monitoring configuration

--- a/rsyslog/confs/5.8.0/21-logzio-file.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-file.conf
@@ -4,13 +4,13 @@
 
 $ModLoad imfile
 $InputFilePollInterval 10
-$WorkDirectory /var/spool/rsyslog
 $PrivDropToGroup adm
+$WorkDirectory RSYSLOG_SPOOL_DIR
 
 # File access file:
 $InputFileName PATH_TO_FILE
 $InputFileTag FILE_TAG_NAME:
-$InputFileStateFile stat-RAND_UUID-FILE_TAG_NAME
+$InputFileStateFile STATE_FILE_NAME
 $InputFileSeverity info
 $InputFilePersistStateInterval 20000
 $InputRunFileMonitor
