Set tag name as the log type of logz.io processing.

--- a/rsyslog/confs/5.8.0/21-logzio-file.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-file.conf
@@ -16,6 +16,6 @@ $InputFilePersistStateInterval 20000
 $InputRunFileMonitor
 
 #Add a tag for file events
-$template logzFormatFileTagName,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=FILE_TAG_NAME] %msg%\n"
+$template logzFormatFileTagName,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=TAG_NAME] %msg%\n"
 if $programname == 'FILE_TAG_NAME' then @@listener.logz.io:5000;logzFormatFileTagName
 if $programname == 'FILE_TAG_NAME' then ~
