rename state file - for "file" monitor installation

--- a/rsyslog/confs/5.8.0/21-logzio-file.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-file.conf
@@ -10,7 +10,7 @@ $WorkDirectory RSYSLOG_SPOOL_DIR
 # File access file:
 $InputFileName PATH_TO_FILE
 $InputFileTag FILE_TAG_NAME:
-$InputFileStateFile stat-logzio-STATE_FILE_NAME
+$InputFileStateFile STATE_FILE_NAME
 $InputFileSeverity info
 $InputFilePersistStateInterval 20000
 $InputRunFileMonitor
