adding mysql installation support

--- a/rsyslog/confs/5.8.0/21-logzio-apache.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-apache.conf
@@ -13,6 +13,7 @@ $InputFileTag apache_access:
 $InputFileStateFile stat-apache-access
 $InputFileSeverity info
 $InputFilePersistStateInterval 25000
+$ActionResumeRetryCount -1
 $InputRunFileMonitor
 
 # Apache error file:
@@ -21,6 +22,7 @@ $InputFileTag apache_error:
 $InputFileStateFile stat-apache-error
 $InputFileSeverity info
 $InputFilePersistStateInterval 25000
+$ActionResumeRetryCount -1
 $InputRunFileMonitor
 
 $template logzioFormatAccess,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=apache_access] %msg%\n"
