--- a/rsyslog/confs/5.8.0/21-logzio-json-file.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-json-file.conf
@@ -13,6 +13,7 @@ $InputFileTag FILE_TAG_NAME:
 $InputFileStateFile STATE_FILE_NAME
 $InputFileSeverity info
 $InputFilePersistStateInterval 20000
+$ActionResumeRetryCount -1
 $InputRunFileMonitor
 
 #Add a tag for file events
