--- a/rsyslog/confs/5.8.0/21-logzio-nginx.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-nginx.conf
@@ -13,6 +13,7 @@ $InputFileTag nginx_access:
 $InputFileStateFile stat-nginx-access
 $InputFileSeverity info
 $InputFilePersistStateInterval 25000
+$ActionResumeRetryCount -1
 $InputRunFileMonitor
 
 # Nginx error file:
@@ -21,6 +22,7 @@ $InputFileTag nginx_error:
 $InputFileStateFile stat-nginx-error
 $InputFileSeverity info
 $InputFilePersistStateInterval 25000
+$ActionResumeRetryCount -1
 $InputRunFileMonitor
 
 $template logzioFormatAccess,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=nginx_access] %msg%\n"
