--- a/rsyslog/Vagrantfile
+++ b/rsyslog/Vagrantfile
@@ -8,6 +8,7 @@
 Vagrant.configure(2) do |config|
   # boxes at https://atlas.hashicorp.com/search.
   config.vm.box = ENV['VAGRANT_BOX']
+  #config.vm.box = "ubuntu/trusty64"
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
