--- a/rsyslog/confs/7.5.3/21-logzio-mysql-error.conf
+++ b/rsyslog/confs/7.5.3/21-logzio-mysql-error.conf
@@ -11,7 +11,7 @@ $PrivDropToGroup adm
 module(load="imfile")
 
 # rsyslog Templates
-template(name="mysql_erorr_logline" type="string" string="[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=mysql_erorr] %msg%\n")
+template(name="mysql_error_logline" type="string" string="[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=mysql_error] %msg%\n")
 
 # rsyslog Input Modules
 input(type="imfile"
@@ -31,6 +31,6 @@ ruleset(name="mysql_error_roleset") {
             Target="listener.logz.io"
             Port="5000"
             Protocol="tcp"
-            template="mysql_erorr_logline")
+            template="mysql_error_logline")
     }
 }
