mysql - multiline to single line

--- a/rsyslog/confs/7.5.3/21-logzio-mysql-error.conf
+++ b/rsyslog/confs/7.5.3/21-logzio-mysql-error.conf
@@ -9,28 +9,29 @@ $PrivDropToGroup adm
 
 # Load Modules
 module(load="imfile")
+module(load="omprog")
+
 
 # rsyslog Templates
-template(name="mysql_error_logline" type="string" string="[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=mysql_error] %msg%\n")
+template(name="mysql_logline" type="string" string="%msg%\n")
+
 
 # rsyslog Input Modules
 input(type="imfile"
     File="PATH_TO_FILE"
     Tag="mysql_error"
-    StateFile="logzio-mysql_error-state"
     PersistStateInterval="25000"
     Severity="info"
     Facility="daemon"
     ruleset="mysql_error_roleset")
 
+
 # rsyslog RuleSets
 ruleset(name="mysql_error_roleset") {
     if $programname == "mysql_error" then {
         # rsyslog RuleSets
-        action(type="omfwd"
-            Target="listener.logz.io"
-            Port="5000"
-            Protocol="tcp"
-            template="mysql_error_logline")
+        action(type="omprog"
+            binary="/opt/logzio/plugins/mysqlerror_rsyslog_plugin.sh USER_TOKEN mysql_error"
+            template="mysql_logline")
     }
 }
