--- a/rsyslog/confs/7.5.3/21-logzio-mysql-slow.conf
+++ b/rsyslog/confs/7.5.3/21-logzio-mysql-slow.conf
@@ -9,28 +9,28 @@ $PrivDropToGroup adm
 
 # Load Modules
 module(load="imfile")
+module(load="omprog")
+
 
 # rsyslog Templates
-template(name="mysql_slow_logline" type="string" string="[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=mysql_slow_query] %msg%\n")
+template(name="mysql_logline" type="string" string="%msg%\n")
 
 # rsyslog Input Modules
 input(type="imfile"
     File="PATH_TO_FILE"
     Tag="mysql_slow"
-    StateFile="logzio-mysql_slow-state"
     PersistStateInterval="25000"
     Severity="info"
     Facility="daemon"
     ruleset="mysql_slow_roleset")
 
+
 # rsyslog RuleSets
 ruleset(name="mysql_slow_roleset") {
     if $programname == "mysql_slow" then {
         # rsyslog RuleSets
-        action(type="omfwd"
-            Target="listener.logz.io"
-            Port="5000"
-            Protocol="tcp"
-            template="mysql_slow_logline")
+        action(type="omprog"
+            binary="/opt/logzio/plugins/mysqlslow_rsyslog_plugin.sh USER_TOKEN mysql_slow_query"
+            template="mysql_logline")
     }
 }
