--- a/rsyslog/confs/7.5.3/21-logzio-mysql.conf
+++ b/rsyslog/confs/7.5.3/21-logzio-mysql.conf
@@ -9,30 +9,29 @@ $PrivDropToGroup adm
 
 # Load Modules
 module(load="imfile")
+module(load="omprog")
+
 
 # rsyslog Templates
-template(name="mysql_logline" type="string" string="[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=mysql] %msg%\n")
+template(name="mysql_logline" type="string" string="%msg%\n")
+
 
 # rsyslog Input Modules
 input(type="imfile"
     File="PATH_TO_FILE"
     Tag="mysql"
-    StateFile="logzio-mysql-state"
     PersistStateInterval="25000"
-    escapelf="on"
-    readMode="2"
     Severity="info"
     Facility="daemon"
     ruleset="mysql_roleset")
+
 
 # rsyslog RuleSets
 ruleset(name="mysql_roleset") {
     if $programname == "mysql" then {
         # rsyslog RuleSets
-        action(type="omfwd"
-            Target="listener.logz.io"
-            Port="5000"
-            Protocol="tcp"
+        action(type="omprog"
+            binary="/opt/logzio/plugins/mysql_rsyslog_plugin.sh USER_TOKEN mysql"
             template="mysql_logline")
     }
 }
