--- a/rsyslog/confs/5.8.0/21-logzio-text-file.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-text-file.conf
@@ -17,6 +17,6 @@ $ActionResumeRetryCount -1
 $InputRunFileMonitor
 
 #Add a tag for file events
-$template logzFormatFileTagName,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=TAG_NAME] %msg%\n"
+$template logzFormatFileTagName,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% - - [type=TAG_NAME] %msg%\n"
 if $programname == 'FILE_TAG_NAME' then @@listener.logz.io:5000;logzFormatFileTagName
 if $programname == 'FILE_TAG_NAME' then ~
