template name bug fix

--- a/rsyslog/confs/5.8.0/21-logzio-apache.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-apache.conf
@@ -25,12 +25,12 @@ $InputFilePersistStateInterval 25000
 $ActionResumeRetryCount -1
 $InputRunFileMonitor
 
-$template logzioFormatAccess,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=apache_access] %msg%\n"
+$template logzioFormatApacheAccess,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=apache_access] %msg%\n"
 
-$template logzioFormatError,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=apache_error] %msg%\n"
+$template logzioFormatApacheError,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=apache_error] %msg%\n"
 
-if $programname == 'apache_access' then @@listener.logz.io:5000;logzioFormatAccess
+if $programname == 'apache_access' then @@listener.logz.io:5000;logzioFormatApacheAccess
 if $programname == 'apache_access' then ~
 
-if $programname == 'apache_error' then @@listener.logz.io:5000;logzioFormatError
+if $programname == 'apache_error' then @@listener.logz.io:5000;logzioFormatApacheError
 if $programname == 'apache_error' then ~
