--- a/rsyslog/confs/5.8.0/21-logzio-nginx.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-nginx.conf
@@ -25,12 +25,12 @@ $InputFilePersistStateInterval 25000
 $ActionResumeRetryCount -1
 $InputRunFileMonitor
 
-$template logzioFormatAccess,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=nginx_access] %msg%\n"
+$template logzioFormatNgnixAccess,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=nginx_access] %msg%\n"
 
-$template logzioFormatError,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=nginx_error] %msg%\n"
+$template logzioFormatNginxError,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=nginx_error] %msg%\n"
 
-if $programname == 'nginx_access' then @@listener.logz.io:5000 ;logzioFormatAccess
+if $programname == 'nginx_access' then @@listener.logz.io:5000 ;logzioFormatNgnixAccess
 if $programname == 'nginx_access' then ~
 
-if $programname == 'nginx_error' then @@listener.logz.io:5000 ;logzioFormatError
+if $programname == 'nginx_error' then @@listener.logz.io:5000 ;logzioFormatNginxError
 if $programname == 'nginx_error' then ~
