--- a/rsyslog/Vagrantfile
+++ b/rsyslog/Vagrantfile
@@ -7,9 +7,9 @@
 # you're doing.
 Vagrant.configure(2) do |config|
   # boxes at https://atlas.hashicorp.com/search.
-  #config.vm.box = ENV['VAGRANT_BOX']
+  config.vm.box = ENV['VAGRANT_BOX']
   #config.vm.box = "ubuntu/trusty64"
-  config.vm.box = "chef/centos-6.6"
+  #config.vm.box = "chef/centos-6.6"
   
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
