config 7.5.3 bug fix

--- a/rsyslog/confs/7.5.3/21-logzio-text-file.conf
+++ b/rsyslog/confs/7.5.3/21-logzio-text-file.conf
@@ -17,9 +17,8 @@ template(name="logzFormatFile_TAG_NAME" type="string" string="[USER_TOKEN] <%pri
 input(type="imfile"
      File="PATH_TO_FILE"
      Tag="FILE_TAG_NAME"
-     PollingInterval=10
      Severity="info"
-     PersistStateInterval=20000
+     PersistStateInterval="20000"
      ruleset="TAG_NAME_ruleset")
 
 # rsyslog RuleSets
