Replaced the static listener address to a variable

--- a/rsyslog/confs/5.8.0/21-logzio-apache.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-apache.conf
@@ -29,8 +29,8 @@ $template logzioFormatApacheAccess,"[USER_TOKEN] <%pri%>%protocol-version% %time
 
 $template logzioFormatApacheError,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=apache_error] %msg%\n"
 
-if $programname == 'apache_access' then @@listener.logz.io:5000;logzioFormatApacheAccess
+if $programname == 'apache_access' then @@LISTENER_HOST:5000;logzioFormatApacheAccess
 if $programname == 'apache_access' then ~
 
-if $programname == 'apache_error' then @@listener.logz.io:5000;logzioFormatApacheError
+if $programname == 'apache_error' then @@LISTENER_HOST:5000;logzioFormatApacheError
 if $programname == 'apache_error' then ~
