--- a/rsyslog/confs/5.8.0/21-logzio-mysql-slow.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-mysql-slow.conf
@@ -18,5 +18,5 @@ $InputRunFileMonitor
 
 #Add a tag for file events
 $template mysql_slow_logline,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=mysql_slow_query] %msg%\n"
-if $programname == 'mysql_slow' then @@listener.logz.io:5000;mysql_slow_logline
+if $programname == 'mysql_slow' then @@LISTENER_HOST:5000;mysql_slow_logline
 if $programname == 'mysql_slow' then ~
