--- a/rsyslog/confs/5.8.0/21-logzio-nginx.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-nginx.conf
@@ -29,8 +29,8 @@ $template logzioFormatNgnixAccess,"[USER_TOKEN] <%pri%>%protocol-version% %times
 
 $template logzioFormatNginxError,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=nginx_error] %msg%\n"
 
-if $programname == 'nginx_access' then @@listener.logz.io:5000 ;logzioFormatNgnixAccess
+if $programname == 'nginx_access' then @@LISTENER_HOST:5000 ;logzioFormatNgnixAccess
 if $programname == 'nginx_access' then ~
 
-if $programname == 'nginx_error' then @@listener.logz.io:5000 ;logzioFormatNginxError
+if $programname == 'nginx_error' then @@LISTENER_HOST:5000 ;logzioFormatNginxError
 if $programname == 'nginx_error' then ~
