--- a/rsyslog/confs/5.8.0/21-logzio-json-file.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-json-file.conf
@@ -19,5 +19,5 @@ $InputRunFileMonitor
 #Add a tag for file events
 $template logzFormatFile_TAG_NAME,"{ \"token\": \"USER_TOKEN\", \"type\": \"TAG_NAME\", %msg:2:$%\n"
 
-if $programname == 'FILE_TAG_NAME' then @@listener.logz.io:5050;logzFormatFile_TAG_NAME
+if $programname == 'FILE_TAG_NAME' then @@LISTENER_HOST:5050;logzFormatFile_TAG_NAME
 if $programname == 'FILE_TAG_NAME' then ~
