--- a/rsyslog/confs/5.8.0/21-logzio-mysql-error.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-mysql-error.conf
@@ -18,5 +18,5 @@ $InputRunFileMonitor
 
 #Add a tag for file events
 $template mysql_error_logline,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [type=mysql_error] %msg%\n"
-if $programname == 'mysql_error' then @@listener.logz.io:5000;mysql_error_logline
+if $programname == 'mysql_error' then @@LISTENER_HOST:5000;mysql_error_logline
 if $programname == 'mysql_error' then ~
