--- a/rsyslog/confs/5.8.0/21-logzio-text-file.conf
+++ b/rsyslog/confs/5.8.0/21-logzio-text-file.conf
@@ -18,5 +18,5 @@ $InputRunFileMonitor
 
 #Add a tag for file events
 $template logzFormatFile_TAG_NAME,"[USER_TOKEN] <%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% - - [type=TAG_NAME] %msg%\n"
-if $programname == 'FILE_TAG_NAME' then @@listener.logz.io:5000;logzFormatFile_TAG_NAME
+if $programname == 'FILE_TAG_NAME' then @@LISTENER_HOST:5000;logzFormatFile_TAG_NAME
 if $programname == 'FILE_TAG_NAME' then ~
