--- a/rsyslog/confs/5.8.0/22-logzio-linux.conf
+++ b/rsyslog/confs/5.8.0/22-logzio-linux.conf
@@ -13,4 +13,4 @@ $ActionQueueType LinkedList   # run asynchronously
 $ActionResumeRetryCount -1    # infinite retries if host is down
 
 # Send messages to Logz over TCP using the template.
-*.*             @@listener.logz.io:5000;logzioFormat
+*.*             @@LISTENER_HOST:5000;logzioFormat
